--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -11,13 +11,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+    
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: uv python install
+      with:
+        python-version-file: "pyproject.toml"
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
 
     - name: Install dependencies
-      run: pip3 install -U git+https://github.com/${{ github.repository }}.git@main
+      run: uv pip install git+https://github.com/${{ github.repository }}.git@main
 
     - name: Run tests
       env:
