--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -6,9 +6,6 @@ on:
     - main
   pull_request:
 
-env:
-  UV_SYSTEM_PYTHON: 1
-
 jobs:
   verify:
     runs-on: ubuntu-latest
@@ -27,7 +24,7 @@ jobs:
       run: uv python install
 
     - name: Install dependencies
-      run: uv pip install git+https://github.com/${{ github.repository }}.git@main
+      run: uv add git+https://github.com/${{ github.repository }}.git@main
 
     - name: Run tests
       env:
