--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -30,4 +30,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GH_PAT: ${{ secrets.GH_PAT }}
-      run: uv run oj-verify all
+      run: uv run oj-verify run
